--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <tr>
                 <td> <img src="Images/img_logo-v3.png" alt="Logo"> </td>
                 <td align="right">
-                    <a href="index.html">HOME |</a>
+                    <a href="">HOME |</a>
                     <a href="#"> SOBRE |</a>
                     <a href="#"> CONTATO</a>
                 </td>
