--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <tr>
                 <td> <img src="Images/img_logo-v3.png" alt="Logo"> </td>
                 <td align="right">
-                    <a href="">| HOME | </a>
+                    <a href="https://renilsonfontenele.github.io/Petster/">| HOME | </a>
                     <a href="#">| QUEM SOMOS | </a>
                     <a href="#">| CONTATO |</a>
                 </td>
